Sat Oct  8 03:17:51 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/shell.rb:  Document some methods of Shell.  Patch by Carol
	  Nichols.  [Ruby 1.9 - Bug #5417]

Fri Oct  7 17:54:28 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (assert_send, assert_not_send):
	  parenthesize non-empty arguments.

Fri Oct  7 06:35:50 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c:  Use + for arguments described in documentation to allow
	  rdoc -C2 to work better.  Remove <code> from method references to
	  allow cross-references in HTML documentation.

Thu Oct  6 18:46:23 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* vm_eval.c (make_no_method_exception): fix typo.

	* vm_insnhelper.c, vm_insnhelper.h: ditto.

Thu Oct  6 16:29:30 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (make_no_method_execption): extract from
	  raise_method_missing().

	* vm_eval.c (send_internal): remove inadvertent symbol creation
	  from public_send.  based on a patch by Jeremy Evans <code AT
	  jeremyevans.net> in [ruby-core:38576]. [Feature #5112]

	* vm_insnhelper.c (vm_call_method): remove inadvertent symbol
	  creation from send and __send__, too.

Thu Oct  6 14:59:11 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/time.rb:  Clean up Time documentation.  Patch by Jake Goulding.
	  [Ruby 1.9 - Bug #5416]

Thu Oct  6 10:00:54 2011  Eric Hodel  <drbrain@segment7.net>

	* enum.c (group_by):  Improve documentation based on patch by b t.

Thu Oct  6 09:56:30 2011  Eric Hodel  <drbrain@segment7.net>

	* enum.c:  Clean up wording in Enumerable documentation.  Patch by b t.
	  [Ruby 1.9 - Bug #5411]

Thu Oct  6 09:17:18 2011  Eric Hodel  <drbrain@segment7.net>

	* time.c (Init_Time):  Remove editorial comments from Time
	  documentation, fix link.

Thu Oct  6 09:14:20 2011  Eric Hodel  <drbrain@segment7.net>

	* time.c (Init_Time):  Improve Time documentation.  Patch by Shane
	  Emmons.  [Ruby 1.9 - Bug #5404]